# ddd-blog

./: docker-compose.yaml  pyproject.toml
api/movie/: README.md  pyproject.toml
api/movie/app/: config.py  main.py
api/movie/app/domain/: exception.py
api/movie/app/domain/entites/: entity.py  movie.py
api/movie/app/domain/repositories/: i_movie_repository.py
api/movie/app/domain/value_objects/movies/: movie_id.py
api/movie/app/infrastructures/data_store/application_services/: sql_transaction_manager.py
api/movie/app/infrastructures/data_store/handler/: mysql_handler.py  sql_handler.py
api/movie/app/infrastructures/data_store/repositories/movies/: mysql_movie_repository.py
api/movie/app/infrastructures/gateway/grpc/: server.py
api/movie/app/intarfaces/controllers/: movie_controller.py  movie_use_case_bus.py
api/movie/app/tests/domain/entites/: test_movie.py
api/movie/app/usecases/: input_port.py  output_port.py
api/movie/app/usecases/application_services/: i_transaction_manager.py
api/movie/app/usecases/movies/get_movies_by_ids/: input_port.py  interactor.py  output_port.py  use_case.py
api/rental_movie/: README.md  pyproject.toml
api/rental_movie/app/: main.py
api/rental_movie/app/domain/: constants.py
api/rental_movie/app/domain/domain_searvices/: i_movie_service.py  rental_due_date_calculator.py  rental_fee_caluculator.py  rental_service.py
api/rental_movie/app/domain/entities/: rental.py
api/rental_movie/app/domain/exception/: domain_exception.py
api/rental_movie/app/domain/factories/: rental_factory.py
api/rental_movie/app/domain/repositories/rental/: i_rental_repository.py
api/rental_movie/app/domain/value_objects/: value_object.py
api/rental_movie/app/domain/value_objects/movie/: movie.py  movie_id.py
api/rental_movie/app/domain/value_objects/rental/: fee.py  rental_id.py  rental_status.py  return_due_date.py  user_id.py
api/rental_movie/app/interfaces/controllers/: movie_controller.py
api/rental_movie/app/usecases/movie/rental/: input_port.py  interactor.py  output_port.py  usecase.py
api/rental_movie/docker/: Dockerfile
api/rental_movie/src/rental_movie/: __init__.py
api/rental_movie/tests/domain/domain_services/: test_rental_due_date_calculator.py
api/rental_movie/tests/domain/entities/: test_rental.py
api/rental_movie/tests/domain/value_objects/: test_rental_status.py
api/rental_movie/tests/interfaces/controllers/: test_movie_controller.py
api/rental_movie/tests/usecases/movie/rental/: test_interactor.py
db/app/: env.py
docker/: Dockerfile
migrations/: pyproject.toml
migrations/app/: database.py
migrations/app/db/migrations/versions/: 20a6efb25d10_movie_relationship.py  27574384bf77_remove_fee.py  36b612448578_change_rental_type.py  92c24611b4a6_movie_relationship.py  bc00d5977e8d_create_tables.py  d1ac04ef7fc5_change_rental_type.py  d1ca6c281ab3_movie_relationship.py
migrations/app/factories/: movie.py
migrations/app/models/: __init__.py  mixins.py  movie.py  rental.py
(+11 files in other folders)
