[project]
name = "db"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ac2393921", email = "ac2393921@gmail.com" }
]
dependencies = [
    "alembic>=1.13.1",
    "sqlalchemy>=2.0.29",
    "sqlalchemy-utils>=0.41.2",
    "mysqlclient==2.1.1",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/db"]
