[project]
name = "rental-movie"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ac2393921", email = "ac2393921@gmail.com" }
]
dependencies = [
    "fastapi>=0.110.2",
    "uvicorn>=0.29.0",
    "pymysql>=1.1.0",
    "pytest>=8.1.1",
    "pytest-mock>=3.14.0",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rental_movie"]
